RESOLVED FIXED279151
Check for invalid characters in name and value when setting a cookie
https://bugs.webkit.org/show_bug.cgi?id=279151
Summary Check for invalid characters in name and value when setting a cookie
rupin
Reported 2024-09-04 15:47:29 PDT
Check for invalid characters when setting Cookie
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-04 15:48:10 PDT
rupin
Comment 2 2024-09-12 14:21:33 PDT
EWS
Comment 3 2024-09-13 08:34:13 PDT
Committed 283624@main (ea42e80465ce): <https://commits.webkit.org/283624@main> Reviewed commits have been landed. Closing PR #33571 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.